--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     </head>
     <body>
         <nav>
-            <a href="http://">Image</a>
-            <a href="http://">Advanced Search</a>
+            <a href="imgsearch.html">Image</a>
+            <a href="advanced.html">Advanced Search</a>
         </nav>
+        
+        <div class="logo_cont">
+            <img class="logo" src="logo.png">
+        </div>
 
-        <img class="logo" src="logo.png">
-
-        <form action="https://google.com/search">
+        <form action="https://google.com/search" autocomplete="off">
             <input type="text" name="q" placeholder="Enter your request...">
             <br>
             <input type="submit" value="Search">
